...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivSearch"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_search"
                    app:tint="@color/textColor" />
                <TextView
...
